[package]
name = "weapon-animation-hotreload"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
eldenring = { path = "../../fromsoftware-rs-0.14.0/crates/eldenring" }
fromsoftware-shared = { path = "../../fromsoftware-rs-0.14.0/crates/shared", package = "fromsoftware-shared" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
] }

[lib]
crate-type = ["cdylib"]
